# connect-any-server

./: .gitignore  Cargo.toml
rustsqlite_derive/: Cargo.toml
rustsqlite_derive/src/: lib.rs
sql/: create_table.sql
src/: lib.rs  main.rs  state.rs  websocket.rs
src/api/: message.rs  mod.rs  user.rs
src/bark/: mod.rs
src/datalayer/: clipboard.rs  database.rs  mod.rs
src/utils/: database.rs  mod.rs
